﻿Add network moderation, alerts and operator tooling for 0.9.8
Global mutes and warnings, /gban on addresses and CIDR ranges, /galts from
an address history, and a protected-players record. Alerts go to one
webhook (Discord and Slack field names), and BungeeCord messages that act
on players on other servers are limited to messaging.trusted-servers.

Also: per-server max-players, per-hostname MOTD and icon, a
permissions.toml group provider, a key-value store for plugins, the
server switch split out of PlayerSession into SessionSwitch, and Via
first installs pinned by SHA-256 in via-bundled.properties.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>